Update GotoUtils to accommodate for chagnes to GOTO API